# BD-Education-Board-API

./: .gitignore  Cargo.toml  README.md  index.html  script.js  styles.css  vercel.json
api/: axum.rs
examples/: fetch_result.py  fetch_result.sh
src/: lib.rs  main.rs
src/api/: fetch.rs
src/config/: board.rs  exam.rs  mod.rs  year.rs
src/exceptions/: mod.rs
src/models/: grade.rs  mod.rs  request.rs  response.rs
src/services/: client.rs  mod.rs  parser.rs  result.rs
src/utils/: captcha.rs
