[package]
name = "EduBoardAPI"
version = "1.1.1"
edition = "2024"
description = "API Wrapper For Bangladesh Education Board Website"
license = "MIT"

[lib]
name = "eduboardapi"
path = "src/lib.rs"

[[bin]]
name = "vercel_axum"
path = "api/axum.rs"

[dependencies]
axum = "0.8.4"
reqwest = { version = "0.11", features = ["json", "cookies"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vercel_runtime = { version = "2", features = ["axum"] }
